<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item android:id="@+id/menu1"
            android:title="@string/Language"
            android:icon="@drawable/ic_settings_white_24dp"
            android:enabled="true"
            android:visible="true"
            app:showAsAction="never" />

        <item android:id="@+id/menu2"
            android:title="@string/favorite"
            android:icon="@drawable/ic_settings_white_24dp"
            android:enabled="true"
            android:visible="true"
            app:showAsAction="never" />

        <item android:id="@+id/search"
            android:title="@string/search_title"
            android:icon="@android:drawable/ic_menu_search"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />

        <item android:id="@+id/menu3"
            android:title="@string/notification_setting"
            android:icon="@drawable/ic_settings_white_24dp"
            android:enabled="true"
            android:visible="true"
            app:showAsAction="never" />
</menu>