<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">



        <ImageView
            android:id="@+id/blackBg"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/gambar" />

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/blackBg"
            android:text="@string/name_heroes"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/homeRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/blackBg"
            android:ellipsize="end"

            android:text="@string/lorem"/>


    <TextView
        android:id="@+id/descDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@id/blackBg"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/lorem"/>

    </RelativeLayout>

